--- a/css/styles.css
+++ b/css/styles.css
@@ -215,11 +215,16 @@ nav ul li:not(:first-child) {
 }
 
 h2{
+    /* padding-top: 100px; */
     font-family: 'Montserrat', sans-serif;
     font-size: 2.5rem; /* 40px--> (100*40)/16 = 250% = 2.5rem  */
     color: #66BFBF;
     font-weight: normal;
     line-height: 1;
+}
+
+.heading{
+  padding-top: 100px;
 }
 
 h3{
